--- a/static/assets/sass/_pawns.scss
+++ b/static/assets/sass/_pawns.scss
@@ -1,8 +1,11 @@
 .pawn {
   position: absolute;
-  height: 15px;
-  width: 15px;
+  height: 20px;
+  width: 20px;
   border-radius: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  opacity: 0;
   &#player1 {
     background-color: red;
   }
