--- a/static/assets/sass/_players.scss
+++ b/static/assets/sass/_players.scss
@@ -13,3 +13,15 @@
     background-color: blue;
   }
 }
+#player1Name {
+  font-weight: bold;
+  color: red;
+  font-size: 20px;
+  margin: 10px, 0;
+}
+#player2Name {
+  font-weight: bold;
+  color: blue;
+  font-size: 20px;
+  margin: 10px, 0;
+}
